# django_bike

./: .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.webapp  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  start-server.sh
.github/workflows/: django.yml
apps/account/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/account/charts/: base.py  exercise_history.py  time_range_query.py
apps/account/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_auto_20200719_1017.py  0004_auto_20200906_1211.py  0005_profile_default_sport.py
apps/extensions/: martor_bulma.py
apps/main/: admin.py  models.py  tests.py  utils.py  views.py
apps/main/migrations/: 0001_initial.py  0002_auto_20201105_0155.py
apps/main/templates/: 400.html  403.html  404.html  500.html  base.html  form-inline.html  form.html  index.html  navbar-item.html  navbar.html  paginator.html  release-note.html
apps/main/tests/: test_tags.py
apps/notification/: admin.py  consumers.py  models.py  notify.py  routing.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py  0002_notification_level.py  0003_auto_20200709_2020.py
apps/track/: admin.py  apps.py  forms.py  models.py  rules.py  tasks.py  tests.py  track_data.py  urls.py  views.py  widgets.py
apps/track/charts/: __init__.py  alt_vs_dist.py  base.py  map.py  power_vs_time.py  slope_vs_dist.py  speed_vs_dist.py
apps/track/migrations/: 0019_like.py  (+22 more)
django_bike/: asgi.py  celery.py  routing.py  settings.py  template.env  urls.py  wsgi.py
django_bike/apps_settings/: martor.py
django_bike/settings/: base.py  dev.py  prod.py  test.py
email_builder/: index.js  package-lock.json  package.json
email_builder/src/: base.html
extensions/: context_processors.py  views.py
release-notes/: 0.10.yml  0.7.yml  0.8.1.yml  0.8.2.yml  0.8.3.yml  0.8.yml  0.9.1.yml  0.9.yml  1.0.1.yml  1.0.yml
static/css/: base.css  navbar.css
static/js/: index.js  navbar.js
templates/: base.html  form.html  navbar.html
templates/registration/: login.html
tests/: test_django_bike.py
webapp/: package-lock.json  package.json  rollup.config.js  tsconfig.json
webapp/src/: App.svelte  Notifications.svelte  main.ts  service.ts
(+46 files in other folders)
