[tool.poetry]
name = "django_bike"
version = "0.1.0"
description = ""
authors = ["Martin Lehoux <martin@lehoux.net>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
celery = "^4.4.5"
requests = "^2.23.0"
redis = "^3.5.3"
django-dotenv = "^1.4.2"
plotly = "^4.8.1"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
flake8 = "^3.8.3"
flower = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
