[tool.poetry]
name = "django_bike"
version = "0.8.1"
description = ""
authors = ["Martin Lehoux <martin@lehoux.net>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
celery = "^4.4.5"
requests = "^2.23.0"
redis = "^3.5.3"
django-dotenv = "^1.4.2"
plotly = "^4.8.1"
pandas = "^1.0.4"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
django-sendgrid-v5 = "^0.8.1"
django-cleanup = "^5.0.0"
rules = "^2.2"
channels = "^2.4.0"
channels_redis = "^3.0.1"
pytest = "^5.4"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
django_coverage_plugin = "^1.8.0"
pytest-asyncio = "^0.14.0"
django-redis = "^4.12.1"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flower = "^0.9.4"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
